BinaryGap (Painless / Easy) - https://codility.com/programmers/task/binary_gap/ - 100%.

--- a/src/Code.Katas.Codility/Code.Katas.Codility.csproj
+++ b/src/Code.Katas.Codility/Code.Katas.Codility.csproj
@@ -39,8 +39,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lessons\01.TimeComplexity.cs" />
-    <Compile Include="Lessons\02.CountingElements.cs" />
+    <Compile Include="Lessons\01.Iterations.cs" />
+    <Compile Include="Lessons\03.TimeComplexity.cs" />
+    <Compile Include="Lessons\04.CountingElements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
