Completed lesson 2 - Arrays - 100%

--- a/src/Code.Katas.Codility/Code.Katas.Codility.csproj
+++ b/src/Code.Katas.Codility/Code.Katas.Codility.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lessons\02.Arrays.cs" />
     <Compile Include="Lessons\01.Iterations.cs" />
     <Compile Include="Lessons\03.TimeComplexity.cs" />
     <Compile Include="Lessons\04.CountingElements.cs" />
