Prefix Sums - Count Div - 100%.

--- a/src/Code.Katas.Codility/Code.Katas.Codility.csproj
+++ b/src/Code.Katas.Codility/Code.Katas.Codility.csproj
@@ -42,6 +42,7 @@
     <Compile Include="Lessons\02.Arrays.cs" />
     <Compile Include="Lessons\01.Iterations.cs" />
     <Compile Include="Lessons\03.TimeComplexity.cs" />
+    <Compile Include="Lessons\05.PrefixSums.cs" />
     <Compile Include="Lessons\04.CountingElements.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
